--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.input {
+  @apply border border-blue-600 rounded-md p-2;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.wrapper {
+  @apply max-w-screen-sm mx-auto flex flex-col h-screen justify-center gap-6;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.heading {
+  @apply text-center font-medium text-blue-600 text-2xl;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.button {
+  @apply bg-gray-700 text-white rounded-md text-lg p-2;
 }
